# ModelHub

./: .gitignore  AGENTS.md  README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js
docs/: REQUIREMENTS.md
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: backup.rs  commands.rs  lib.rs  main.rs  paths.rs
src-tauri/src/adapters/: claude.rs  codex.rs  fetch_models.rs  import.rs  live.rs  mod.rs  opencode.rs  pi.rs  preview.rs  test_connection.rs  util.rs
src-tauri/src/store/: mod.rs  types.rs
src/api/: tauri.ts
src/components/: BatchTestConnectionModal.tsx  ExternalLink.tsx  ImportRow.tsx  Layout.tsx  Modal.tsx  MultiProviderTestModal.tsx  TestConnectionModal.tsx  Toast.tsx
src/lib/: batchTestSession.ts  lastTestResults.ts  multiTestSession.ts  openExternal.ts  singleTestSession.ts  testDisplay.ts  testHeaders.ts
src/pages/: AgentsPage.tsx  ApplyPage.tsx  BackupsPage.tsx  ImportPage.tsx  ProvidersPage.tsx  SettingsPage.tsx
src/styles/: index.css
src/types/: index.ts
