[package]
name = "modelhub"
version = "0.1.0"
description = "Provider-first model config hub for Claude Code, Codex, OpenCode, and Pi"
authors = ["ModelHub"]
edition = "2021"

[lib]
name = "modelhub_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
anyhow = "1"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
dirs = "6"
fs-err = "3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
